# serialmcu-bridge

./: .gitignore  Cargo.toml  flake.nix  go.mod  justfile  main.go  main.rb  pc.py  rust-toolchain.toml
src/: args.rs  commands.rs  main.rs  serial.rs  types.rs
