[package]
name = "rserial"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.204"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serial = "5.4.4"
